Fix installation to include media files.
This patch copies the logo images to /usr/share/samba-gtk and if at runtime if it fails to
load the images from the locally directory loads it from there.

Also added icons to the .desktop files and changed setup.py to use absolute paths.

Unfortunately taskbars don't seem to necessarily pick up on the application icons at this stage.

--- a/meta/gepdump.desktop
+++ b/meta/gepdump.desktop
@@ -2,7 +2,7 @@
 Name=DCE/RPC Endpoint Dumper
 Comment=Show DCE/RPC endpoint mapper
 Exec=gepdump
-#Icon=media-player-48.png
+Icon=/usr/share/samba-gtk/samba-logo-square.png
 Type=Application
 Terminal=false
 Categories=GNOME;GTK;RemoteAccess;Profiling;Utility;Network;Development;
