--- a/meta/gregedit.desktop
+++ b/meta/gregedit.desktop
@@ -2,7 +2,7 @@
 Name=Registry Editor
 Comment=Edit Windows-Style Registry files
 Exec=gregedit
-#Icon=media-player-48.png
+Icon=/usr/share/samba-gtk/samba-logo-square.png
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;RemoteAccess;Utility;Network;
