--- a/meta/gwcrontab.desktop
+++ b/meta/gwcrontab.desktop
@@ -2,6 +2,7 @@
 Name=Windows Job Scheduler
 Comment=View and plan jobs on remote Windows hosts
 Exec=gwcrontab
+Icon=/usr/share/samba-gtk/samba-logo-square.png
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;RemoteAccess;Utility;Network;
