Various improvements/fixes in gtkldb.
Most significantly visually I changed from using a menubar to a toolbar.
This was done because there wasn't really enough menu items to justify the menubar
and elementary OS and to a lesser degree GNOME3 prefers using a combined
titlebar and toolbar over using a menu.

Errors now display inline using the new Gtk.InfoBar.

--- a/meta/gregedit.desktop
+++ b/meta/gregedit.desktop
@@ -2,7 +2,7 @@
 Name=Registry Editor
 Comment=Edit Windows-Style Registry files
 Exec=gregedit
-Icon=/usr/share/samba-gtk/samba-logo-square.png
+Icon=samba
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;RemoteAccess;Utility;Network;
