--- a/meta/gepdump.desktop
+++ b/meta/gepdump.desktop
@@ -2,7 +2,7 @@
 Name=DCE/RPC Endpoint Dumper
 Comment=Show DCE/RPC endpoint mapper
 Exec=gepdump
-Icon=/usr/share/samba-gtk/samba-logo-square.png
+Icon=samba
 Type=Application
 Terminal=false
 Categories=GNOME;GTK;RemoteAccess;Profiling;Utility;Network;Development;
