Fixes: make apps installable, remove near-empty menubars, i18n-alize.
Capped lines at 81 characters for better readability.

Moved mostly to system icons over packaged images and made the rest available from /usr/share/samba-gtk/.

Branded application icons with the Samba S, and instead of setting it as the window icon I registered
it as the application icon via the .desktop file and for richer task managers (docks) had the applications
identify as corresponding to that .desktop file.

Got rid of menubars because they offered little value to the limited functionality of these applications,
GNOME3/elementary are moving away from menubars in their design guidelines, and their use is inefficient
in interaction and code. Got rid of "Quit" options due to Canonical/elementary not liking it.

Replaced the menubars with toolbars or (for GNOME3, elementary) headerbars.

Made use of inline toolbar styles to clear up some visual confusion.

Used gettext to internationalize the code (passing all interface strings to it's _ function for translation).

Imposed some order on single verses double quotes (single for identifiers, double for userfacing, etc).

Occasionally added a .source-list class for stylesheets that support it like elementary's.

Yes I'm biased somewhat to elementary OS's Pantheon desktop.

--- a/meta/gwcrontab.desktop
+++ b/meta/gwcrontab.desktop
@@ -2,8 +2,8 @@
 Name=Windows Job Scheduler
 Comment=View and plan jobs on remote Windows hosts
 Exec=gwcrontab
-Icon=samba
-Terminal=false
+Icon=samba-gwcrontab
 Type=Application
+Terminal=false
 Categories=GNOME;GTK;RemoteAccess;Utility;Network;
 StartupNotify=true
