--- a/meta/gwsvcctl.desktop
+++ b/meta/gwsvcctl.desktop
@@ -2,7 +2,7 @@
 Name=Control Windows Services
 Comment=Stop, start and view status of services on a remote Windows host
 Exec=gwsvcctl
-Icon=samba
+Icon=samba-gwsvcctl
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;RemoteAccess;System;Network;Utility;
