Hiding unfinished applications from menus.

--- a/meta/gepdump.desktop
+++ b/meta/gepdump.desktop
@@ -7,3 +7,4 @@ Type=Application
 Terminal=false
 Categories=GNOME;GTK;RemoteAccess;Profiling;Utility;Network;Development;
 StartupNotify=true
+Hidden=true
