Adding authentication to GtkLDB, giving it it's own app icon, further fixes.

--- a/meta/gtkldb.desktop
+++ b/meta/gtkldb.desktop
@@ -2,7 +2,7 @@
 Name=LDB Browser
 Comment=Lightweight database browser and editor
 Exec=gtkldb %f
-Icon=samba
+Icon=samba-gtkldb
 Type=Application
 Terminal=false
 Categories=GNOME;GTK;RemoteAccess;System;Utility;Network;Database
